--- a/styles/index_krabansky.css
+++ b/styles/index_krabansky.css
@@ -111,7 +111,7 @@
     align-items: center;
     padding: 50px;
     margin: 50px;
-    background-color: limegreen;
+    background-color: darkgray;
     height: 400px;
 
     border-color: black;
